<resources>
    <string name="app_name">Team校园</string>
    <string name="phoneHint">手机号/+86</string>
    <string name="passwordHint">用户密码</string>
    <string name="setPasswordHint">设置密码</string>
    <string name="repeatPasswordHint">确认密码</string>
    <string name="codeHint">验证码</string>


    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>

    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="nameHint">用户名</string>
    <string name="emailHint">电子邮箱</string>
    <string name="hint_intro">用户简介</string>
</resources>
